fixed height on intro box to fit on smaller screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,7 +59,7 @@
 
 .intro {
   width: 100%;
-  height: 57rem;
+  height: 44rem;
   background-color: cornflowerblue;
 }
 
